blog width overflow bug fix

--- a/src/assets/stylesheets/markdown.scss
+++ b/src/assets/stylesheets/markdown.scss
@@ -39,6 +39,7 @@
         font-size: var(--step-0);
         color: $color-primary;
         list-style-type: "📖 ";
+        max-width: 70vw;
     }
 
     pre {
